Bug 120363 - Having a Python-based extension installed when Java is disabled shows a "Libreoffice requires a Java runtime environment (JRE)" warning at LibreOffice start
Summary: Having a Python-based extension installed when Java is disabled shows a "Libr...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:6.2.0
Keywords:
Depends on:
Blocks: Java-Runtime-JRE-Warnings
  Show dependency treegraph
 
Reported: 2018-10-06 13:55 UTC by Mike Kaganski
Modified: 2018-10-08 14:15 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2018-10-06 13:55:04 UTC
If a Python-based extension is installed in LibreOffice, and JRE is disabled in Advanced options, an "Enable JRE?" warning is shown at LibreOffice startup.

As a Python-based extension example, you might try APSO [1]. Note that it might hand LibreOffice when tried to install first time. I had to kill soffice and re-run installation (without removing the incomplete installation) to successfully finish the installation.

[1] https://extensions.libreoffice.org/extensions/apso-alternative-script-organizer-for-python
Comment 1 Mike Kaganski 2018-10-06 14:16:01 UTC
https://gerrit.libreoffice.org/61468
Comment 2 Commit Notification 2018-10-08 14:12:43 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f3ce30ec75a4d7116b9cd4d7b21d9aaa0e237eeb

tdf#120363: try to avoid asking user to enable JVM when looking ...

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.