cui/source/customize/cfgutil.cxx
@@ -47,6 +47,7 @@
 #include <bitmaps.hlst>
 #include <sfx2/app.hxx>
 #include <sfx2/minfitem.hxx>
+#include <comphelper/DisableInteractionHelper.hxx>
 #include <comphelper/documentinfo.hxx>
 #include <comphelper/processfactory.hxx>
 #include <comphelper/sequenceashashmap.hxx>
@@ -65,7 +66,6 @@
 #include <vcl/help.hxx>
 #include <vcl/vclmedit.hxx>
 #include <o3tl/make_unique.hxx>
-#include <uno/current_context.hxx>
 
 using namespace ::com::sun::star;
 using namespace ::com::sun::star::uno;
@@ -542,36 +542,6 @@ namespace
     }
 }
 
-namespace
-{
-class NoEnableJavaInteractionContext : public cppu::WeakImplHelper<css::uno::XCurrentContext>
-{
-public:
-    explicit NoEnableJavaInteractionContext(
-        css::uno::Reference<css::uno::XCurrentContext> const& xContext)
-        : mxContext(xContext)
-    {
-    }
-    NoEnableJavaInteractionContext(const NoEnableJavaInteractionContext&) = delete;
-    NoEnableJavaInteractionContext& operator=(const NoEnableJavaInteractionContext&) = delete;
-
-private:
-    virtual ~NoEnableJavaInteractionContext() override {}
-
-    virtual css::uno::Any SAL_CALL getValueByName(OUString const& Name) override
-    {
-        if (Name == "DontEnableJava")
-            return css::uno::Any(true);
-        else if (mxContext.is())
-            return mxContext->getValueByName(Name);
-        else
-            return css::uno::Any();
-    }
-
-    css::uno::Reference<css::uno::XCurrentContext> mxContext;
-};
-
-} // namespace
 
 void SfxConfigGroupListBox::FillScriptList(const css::uno::Reference< css::script::browse::XBrowseNode >& xRootNode,
                                            SvTreeListEntry* pParentEntry, bool bCheapChildrenOnDemand)
@@ -581,7 +551,7 @@ void SfxConfigGroupListBox::FillScriptList(const css::uno::Reference< css::scrip
         {
             // tdf#120362: Don't ask to enable disabled Java when filling script list
             css::uno::ContextLayer layer(
-                new NoEnableJavaInteractionContext(css::uno::getCurrentContext()));
+                new comphelper::NoEnableJavaInteractionContext(css::uno::getCurrentContext()));
 
             Sequence< Reference< browse::XBrowseNode > > children =
                 xRootNode->getChildNodes();
